--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -222,8 +222,10 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.js" ></script>
+    <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+
 
     <!--Extern packages -->
     <script src="_content/BlazorApplicationInsights/JsInterop.js"></script>
