--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -224,7 +224,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+    <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
 
 
     <!--Extern packages -->
