--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -234,6 +234,7 @@
     <script>require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
     <script src="_content/BlazorMonaco/jsInterop.js"></script>
+    <script src="_content/BlazorTable/BlazorTable.min.js"></script>
 </body>
 
 </html>
