--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -229,7 +229,7 @@
 
 
     <!--Extern packages -->
-    <script src="js/smartlook.js"></script>
+    <script src="js/extern/smartlook.js"></script>
     <script src="_content/BlazorApplicationInsights/JsInterop.js"></script>
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
     <script>require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
