--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 
     <!-- Intern packages -->
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="application/javascript"></script>
 
     <!-- Extern packages -->
     <link href="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.css" rel="stylesheet" />
@@ -231,10 +231,10 @@
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
 
     <!-- Intern packages -->
-    <script src="js/intern/audioplayer-def.js"></script>
+    <script src="js/intern/audioplayer-def.js" type="application/javascript"></script>
 
     <!-- Extern packages -->
-    <script src="js/extern/smartlook.js"></script>
+    <script src="js/extern/smartlook.js" type="application/javascript"></script>
     <script src="_content/BlazorApplicationInsights/JsInterop.js"></script>
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
     <script>require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
