Add repeated sounds

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -234,7 +234,7 @@
     <script src="js/intern/audioplayer-def.js" type="application/javascript"></script>
 
     <!-- Extern packages -->
-    <script src="js/extern/smartlook.js" type="application/javascript"></script>
+    <script src="js/extern/smartlook-def.js" type="application/javascript"></script>
     <script src="_content/BlazorApplicationInsights/JsInterop.js"></script>
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
     <script>require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
