--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -225,14 +225,6 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
-
-    <!-- Intern packages -->
-    <script src="js/intern/audioplayer-def.js" type="application/javascript"></script>
-
     <!-- Extern packages -->
     <script src="js/extern/smartlook-def.js" type="application/javascript"></script>
     <script src="_content/BlazorApplicationInsights/JsInterop.js"></script>
@@ -241,6 +233,15 @@
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
     <script src="_content/BlazorMonaco/jsInterop.js"></script>
     <script src="_content/BlazorTable/BlazorTable.min.js"></script>
+
+    <!-- App packages -->
+    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.js"></script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
+
+    <!-- Intern packages -->
+    <script src="js/intern/audioplayer-def.js" type="application/javascript"></script>
 </body>
 
 </html>
