New test sdk insight

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -27,7 +27,8 @@
                 disableFetchTracking: false,
                 enableCorsCorrelation: true,
                 enableRequestHeaderTracking: true,
-                enableResponseHeaderTracking: true
+                enableResponseHeaderTracking: true,
+                enableDebug: true
             }
         });
     </script>
