New test sdk insight

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -23,12 +23,10 @@
             ld: -1,
             crossOrigin: "anonymous",
             cfg: {
-                instrumentationKey: "",
                 disableFetchTracking: false,
                 enableCorsCorrelation: true,
                 enableRequestHeaderTracking: true,
-                enableResponseHeaderTracking: true,
-                enableDebug: true
+                enableResponseHeaderTracking: true
             }
         });
     </script>
