--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -23,6 +23,7 @@
             ld: -1,
             crossOrigin: "anonymous",
             cfg: {
+                instrumentationKey: "",
                 disableFetchTracking: false,
                 enableCorsCorrelation: true,
                 enableRequestHeaderTracking: true,
