Test application insight

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -23,7 +23,7 @@
             ld: -1,
             crossOrigin: "anonymous",
             cfg: {
-                instrumentationKey: "",
+                connectionString: "InstrumentationKey=0a5c1e6c-0422-4f63-955d-0b60b2e5477d;",
                 disableFetchTracking: false,
                 enableCorsCorrelation: true,
                 enableRequestHeaderTracking: true,
