--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -24,6 +24,7 @@
             crossOrigin: "anonymous",
             cfg: {
                 instrumentationKey: "",
+                loggingLevelConsole: 2,
                 disableFetchTracking: false,
                 enableCorsCorrelation: true,
                 enableRequestHeaderTracking: true,
