Monaco package is the bad guy

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -28,8 +28,7 @@
                 enableRequestHeaderTracking: true,
                 enableResponseHeaderTracking: true
             }
-        });
-    </script>
+        });</script>
 </head>
 
 <body class="d-flex flex-column h-100">
