Clean program.cs

--- a/MadWorld/MadWorld.Website/wwwroot/index.html
+++ b/MadWorld/MadWorld.Website/wwwroot/index.html
@@ -232,7 +232,7 @@
     <!-- Extern packages -->
     <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="js/extern/smartlook-def.js"></script>
-    <script type="text/javascript" src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
     <script type="text/javascript">require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
     <script type="text/javascript" src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
     <script type="text/javascript" src="_content/BlazorMonaco/jsInterop.js"></script>
